---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2022-10-28
  Bugfixes:
    - Fixed scripted entity ghost revive, entity build or entity clone not detected by listening to (hopefully) all the various events regarding entity creation (including script_raised_revive used by "Nanobots: Early Bots").
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-01-19
  Info:
    - Full rewrite from the ground up for less UPS impact and more robustness.
    - Fully Space Age compatible (but doesn't require Space Age).
    - More accurate prediction of when the inserter hand is over the pickup target again.
      Inserters less often pick up other stuff when they actually need to refuel themselves or their drop target.
    - Eventual inserter discovery loop to find inserters built by other mods without raising the appropriate events.
    - The refuel cheat doesn't create power from thin air anymore.\n
      First, the inserter's held items are checked.\n
      Then an item is searched at the pickup location (burner inventory, normal inventory, belt lane or tile).\n
      And last, an item is searched at the drop location (burner inventory, normal inventory, belt lane or tile).\n
      If an item is found, it is teleported into the inserter burner inventory.\n
    - Inserters also leech fuel for themselves from drop target.\n
      This is unreliable for now, but still good enough for low traffic with cheat refueling enabled.\n
    - Admin chat command /iflreset to reset the mod state and rediscover all inserters immediately.
    - Chat command /iflstats to print some statistics about the known inserters.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-02-01
  Bugfixes:
    - Fixed ring buffer length calculation (was larger than needed).