@@ -5,6 +5,7 @@
 
 inserter-fuel-leech-inserters-enabled=Enable extra leeching for
 inserter-fuel-leech-discover-per-tick=Inserters to (re)discover every tick
+inserter-fuel-leech-discover-empty-chunks-per-tick=Empty chunks to skip every tick
 inserter-fuel-leech-self-leech-from-drop-enabled=Enable leech for self from drop
 inserter-fuel-leech-self-refuel-cheat-enabled=Enable backup self-refuel cheat
 inserter-fuel-leech-pickup-margin-ticks=Pickup distance margin [ticks]
@@ -24,6 +25,7 @@ inserter-fuel-leech-last-inserter-log-color=Last inserter message color
 
 inserter-fuel-leech-inserters-enabled=The types of inserters for which runtime handling is done.\nThe prototype flag allow_burner_leech is always enabled for all inserters regardless of this setting.
 inserter-fuel-leech-discover-per-tick=(Re)Discovers this many inserters already existing on the map per tick.\nIncrease when using mods creating lots of inserters you want to be handled without raising the appropriate events.\nLeave at 1 otherwise. Setting this to zero will not help UPS issues even when playing on a potato.
+inserter-fuel-leech-discover-empty-chunks-per-tick=Maximally skip this many empty chunks per tick when (re)discovering inserters.\nThis is mostly a debug setting. The default should be fine on any system.
 inserter-fuel-leech-self-leech-from-drop-enabled=If a burner inserter needs fuel, it might take it from its drop target in addition to taking it from the pickup target.
 inserter-fuel-leech-self-refuel-cheat-enabled=If a burner inserter gets stuck out of fuel and it has fuel in its hand or its pickup target or drop target has fuel, one item of that fuel is teleported into the inserters fuel inventory.
 inserter-fuel-leech-pickup-margin-ticks=Inserters will teleport fuel items into their hand up to this amount of ticks early from their pickup target or late from their drop target. If this is too low, the inserter may already have picked up another item or miss the opportunity to leech from a drop target when timing estimates are off.
